# scratch

./: README.md  _rsa.c  aes_oneshot.c  dot_emacs  mak  rsa.py  rsa_test.c  setup.py  t  tlib.c
fec/: openfec.py
kamino/: .hg_archival.txt  .hgignore  TODO  __init__.py  km  t
kamino/body/: patch_applier.py  patch_file.py  scanner.py
kamino/body/db/: __init__.py  file_store.py  patch_creator.py  types.py  updater.py
kamino/body/fs/: __init__.py  cimpl.c  cwrap.py
kamino/mind/: definition.py  roles.py  udev_to_json.py
openfec/: t  t.c  t2  t3  t4
os_env-1.0/: .hg_archival.txt  .hgtags  CMakeLists.txt  README  config.h.cmake  os_env.c  os_env_update
os_env-1.0/man/: CMakeLists.txt  os_env.1  os_env.conf.5  os_env_update.1
os_env-1.0/py_src/: os_env.py
profigure/: .hgignore  TODO  __init__.py  acct_db.py  admin.py  applier  applier.py  colors.py  connection.py  dist_builder.py  doctrine.py  file_transfer.py  hg_interface.py  host.py  host.tac  init_master.py  localhost.py  master.py  master.tac  pb_srp.py  pro_conf.py  profigure  profigure-client  roster.py  sh_to_json.py  srp.py  srp_db.py  ssl_certs.py  t  t2.py
profigure/scanners/: __init__.py  basic.py  fstab.py
ssl_stuff/: m2crypto_ca
stargate/: CMakeLists.txt  abidos.hpp  abidos_byte_string.hpp  abidos_common.cpp  abidos_common.hpp  abidos_data.cpp  abidos_data.hpp  abidos_data_type.hpp  abidos_error.hpp  abidos_lua.cpp  abidos_lua.hpp  abidos_lua_wrappers.lua  abidos_model.hpp  abidos_type_encoding.cpp  abidos_type_encoding.hpp  abidos_uuid.hpp  abidos_world.cpp  abidos_world.hpp  abidos_world_builder.cpp  abidos_world_builder.hpp  abidos_world_def.lua  abidos_world_interface.cpp  abidos_world_interface.hpp  abidos_world_loader.lua  lua2cxx  luapp.hpp  t  t.hpp  test.cpp  test.lua  test_model.cpp  test_world.wdf  tgen  world_builder.hpp  world_interface.hpp
