cmake_minimum_required(VERSION 2.8)

project(os_env)

set( CPACK_PACKAGE_VERSION "1.0" )
set( CPACK_PACKAGE_NAME "os_env" )
set( CPACK_PACKAGE_DESCRIPTION_SUMMARY "chroot-like utility for running processes in alternate Linux distirubtion environments")
set( CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")

set( CPACK_PACKAGING_INSTALL_PREFIX "/" )

set( CPACK_RPM_PACKAGE_RELEASE )
set( CPACK_RPM_PACKAGE_DESCRIPTION )
set( CPACK_RPM_PACKAGE_SUMMARY )
set( CPACK_RPM_PACKAGE_NAME )
set( CPACK_RPM_PACKAGE_VERSION )
set( CPACK_RPM_PACKAGE_GROUP )
set( CPACK_RPM_PACKAGE_VENDOR )

set( CPACK_RPM_PACKAGE_LICENSE "GPLv2")
set( CPACK_RPM_PACKAGE_REQUIRES "python >= 2.6.0" )

set( CPACK_GENERATOR "RPM" )

include(CPack)


set( OS_ENV_PY ${CMAKE_INSTALL_PREFIX}/usr/share/os_env/os_env.py )

configure_file( ${CMAKE_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )

include_directories( ${CMAKE_CURRENT_BINARY_DIR} )

add_executable(os_env os_env.c)

add_subdirectory(man)

install( DIRECTORY py_src/ DESTINATION usr/share/os_env FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
         DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )

install( FILES os_env_update DESTINATION usr/bin PERMISSIONS 
         OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )

install( TARGETS os_env RUNTIME DESTINATION usr/bin PERMISSIONS 
         OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE SETUID )

